- removed the registry section - removed the times for the wedding - fixed the checkbox and label spacing

--- a/wedding_web/web/stylesheet.css
+++ b/wedding_web/web/stylesheet.css
@@ -153,3 +153,8 @@ tr.registry_row > td
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+.cb input
+{
+    margin-left: 20px;
+}
